Adds loader and timer saga

--- a/kanban-board-app/.eslintrc.json
+++ b/kanban-board-app/.eslintrc.json
@@ -22,7 +22,7 @@
     ],
     "rules": {
         "prettier/prettier": "error",
-        "indent": ["error", 2],
+        "indent": ["off"],
         "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }]
     }
 }
